fixes bug 134793 "browser hangs when [ is put in the URL bar" r=gagan sr=rpotts